feat: improve login and register endpoints
